wow, ok, created the artifact chooser, integrated the document editor and linker for artifacts with edit and show, may need to follow the pattern for artifacts better,  got artifacts displaying nested (could even recurse if needed) set up dynamic side menu width for same, wrapped all in directives for compilation into templates for building packages

--- a/modules/core/client/scss/core.scss
+++ b/modules/core/client/scss/core.scss
@@ -577,9 +577,14 @@ th .progress-bar {
 .document-icon-list a .glyphicon {
 	font-size: 40px;
 }
-.document-icon-list .thumbnail {
-	margin: 3px;
+.document-icon-list .glyphicon {
+	font-size: 40px;
 }
+.document-icon-list .thumbnail {
+	margin: 2px;
+	width: 100px;
+}
+
 // -------------------------
 // PANELS...
 // -------------------------
