--- a/modules/templates/client/views/template-document-editor.html
+++ b/modules/templates/client/views/template-document-editor.html
@@ -6,14 +6,13 @@
 		</a>
 	</div>
 	<div class="thumbnails document-icon-list clearfix">
-
 		<div class="thumbnail pull-left" ng-repeat="file in curVal">
 			<div class="caption text-center">
 				<a href>
 					<a href="/api/document/{{ file._id }}/fetch" target="_blank">
 					<span class="glyphicon glyphicon-file"></span>
 					<br>
-					<small>{{ file.internalOriginalName }}</a>{{ file.projectFolderType }} / {{ file.projectFolderSubType }} / {{ file.projectFolderName }}</small>
+					<small>{{ file.internalOriginalName }} {{ file.projectFolderType }} / {{ file.projectFolderSubType }} / {{ file.projectFolderName }}</small>
 					<small ng-if="file.v"><br/>v.{{ file.documentVersion }}</small>
 					<small>{{ file.dateUpdated | amDateFormat:'MMM Do'}}</small>
 					</a>
