--- a/modules/documents/client/views/dir.document.link.list.html
+++ b/modules/documents/client/views/dir.document.link.list.html
@@ -1,7 +1,7 @@
-<div class="document-block text-left">
+<div class="document-block">
 	<div class="panel-heading">
 		{{ ::title }}
-		<a ng-if="editable" href x-modal-document-link class="btn btn-xs btn-link pull-right" x-current="curVal" x-project="project">
+		<a ng-if="editable" href x-modal-document-link class="btn btn-xs btn-link pull-right" x-current="list" x-project="project">
 			+/- Link Documents
 		</a>
 	</div>
