--- a/modules/documents/client/views/dir.document.link.list.html
+++ b/modules/documents/client/views/dir.document.link.list.html
@@ -1,6 +1,6 @@
 <div class="document-block">
 	<div class="panel-heading">
-		{{ ::title }}
+		{{ ::title }} DERPPP
 		<a ng-if="editable" href x-modal-document-link class="btn btn-xs btn-link pull-right" x-current="list" x-project="project">
 			+/- Link Documents
 		</a>
