--- a/modules/templates/client/views/template-artifact-editor.html
+++ b/modules/templates/client/views/template-artifact-editor.html
@@ -1,42 +1,47 @@
 <div class="document-block">
-	<div>
-		{{ ::title }}
-		<a ng-if="editable" href x-artifact-chooser class="btn btn-xs btn-link" x-artifact="artifact" x-project="project">
+    <div class="document-block-header clearfix">
+	    <h4 class="pull-left">{{ ::title }}</h4>
+        <a ng-if="editable" href x-artifact-chooser class="btn btn-xs btn-link pull-right" x-artifact="artifact" x-project="project">
 			+/- Choose Artifact
 		</a>
 	</div>
-	<div ng-if="loading">
-		<div class="thumbnails document-icon-list clearfix">
-			<div class="thumbnail pull-left">
-				<span class="glyphicon glyphicon-refresh glyphicon-refresh-animate" style="color: #d9edf7"></span>
-			</div>
-		</div>
-	</div>
-	<div ng-if="loaded && !expanded">
-		<div class="panel panel-info">
-			<div class="pull-left">
-			<div class="document-icon-list clearfix">
-			<div class="pull-left">
-				<span class="glyphicon glyphicon-list-alt" style="color: #d9edf7"></span>
-			</div>
-			</div>
-			</div>
-			<div class="text-left pull-left">
-				{{ artifact.name }}<br/>({{ artifact.version }} / {{ artifact.stage }})<br/>
-			</div>
-			<div class="text-right">
-				<a href ng-click="expand()" class="btn btn-xs btn-link">- Expand</a>
-			</div>
-		</div>
-	</div>
-	<div ng-if="loaded && expanded">
-		<div ng-if="artifact.isTemplate">
-			<a href ng-click="expand()" class="btn btn-xs btn-link">- Collapse</a>
-			<tmpl-template-render x-template="artifact.template" x-mode="view" x-project="project" x-document="artifact.templateData"></tmpl-template-render>
-			<a href ng-click="expand()" class="btn btn-xs btn-link">- Collapse</a>
-		</div>
-		<div ng-if="!artifact.isTemplate">
-		<div ng-include="'modules/artifacts/client/views/partial.artifact.document.html'"></div>
-		</div>
-	</div>
+    <div class="panel panel-default">
+        <div class="panel-body">
+            <div ng-if="loading">
+                <div class="thumbnails document-icon-list clearfix">
+                    <div class="thumbnail pull-left">
+                        <span class="glyphicon glyphicon-refresh glyphicon-refresh-animate" style="color: #d9edf7"></span>
+                    </div>
+                </div>
+            </div>
+            <div ng-if="loaded && !expanded">
+                <div class="file-horiz">
+                    <span class="glyphicon glyphicon-list-alt" style="color: #d9edf7"></span>
+                    <span class="file-details">
+                        {{ artifact.name }}<br/>({{ artifact.version }} / {{ artifact.stage }})
+                    </span>
+                    <span class="file-actions">
+                        <a href ng-click="expand()" class="btn btn-xs btn-link pull-right">- Expand</a>
+                    </span>
+                </div>
+            </div>
+            <div ng-if="loaded && expanded">
+                <div class="file-horiz" ng-if="artifact.isTemplate">
+                    <span class="glyphicon glyphicon-list-alt" style="color: #d9edf7"></span>
+                    <span class="file-details">
+                        {{ artifact.name }}<br/>({{ artifact.version }} / {{ artifact.stage }})
+                    </span>
+                    <span class="file-actions">
+                        <a href ng-click="expand()" class="btn btn-xs btn-link">- Collapse</a>
+                    </span>
+                </div>
+                <div class="file-expanded-details">
+                <tmpl-template-render x-template="artifact.template" x-mode="view" x-project="project" x-document="artifact.templateData"></tmpl-template-render>
+                    <div ng-if="!artifact.isTemplate">
+                        <div ng-include="'modules/artifacts/client/views/partial.artifact.document.html'"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
