making uploading an artifact document actually work, left some wacky stuff in that needs to be removed

--- a/modules/artifacts/client/views/partial.artifact-view.html
+++ b/modules/artifacts/client/views/partial.artifact-view.html
@@ -6,8 +6,11 @@
 	 -->
 	<tmpl-template-render x-template="artifact.template" x-mode="view" x-project="project" x-document="artifact.templateData"></tmpl-template-render>
 </div>
-
-
 <div ng-if="!artifact.isTemplate" ng-init="editable=false">
-<div ng-include="'modules/artifacts/client/views/partial.artifact.document.html'"></div>
+	<!--
+
+		This section gets displayed if the content is a document
+
+	 -->
+	<div ng-include="'modules/artifacts/client/views/partial.artifact.document.html'"></div>
 </div>
