decision package stuff

--- a/modules/templates/client/views/template-artifact-editor.html
+++ b/modules/templates/client/views/template-artifact-editor.html
@@ -36,9 +36,13 @@
                     </span>
                 </div>
                 <div class="file-expanded-details">
-                <tmpl-template-render x-template="artifact.template" x-mode="view" x-project="project" x-document="artifact.templateData"></tmpl-template-render>
+                    <tmpl-template-render ng-if="artifact.isTemplate" x-template="artifact.template" x-mode="view" x-project="project" x-document="artifact.templateData"></tmpl-template-render>
                     <div ng-if="!artifact.isTemplate">
                         <div ng-include="'modules/artifacts/client/views/partial.artifact.document.html'"></div>
+                        <span class="file-actions">
+                            <a href ng-click="expand()" class="btn btn-xs btn-link">- Collapse</a>
+                        </span>
+
                     </div>
                 </div>
             </div>
