fixed move to decision

--- a/modules/core/client/scss/core.scss
+++ b/modules/core/client/scss/core.scss
@@ -1626,7 +1626,7 @@ div.dropdown-menu {
 ------------------------------ */
 .projects-table {
     table-layout: fixed;
- 
+
     th:last-child {
         width: 10rem;
         text-align: right;
@@ -1724,24 +1724,24 @@ div.dropdown-menu {
     display: -webkit-flex;
     display: flex;
     flex-flow: row-nowrap;
-    
+
     .glyphicon {
         flex: 0 0 6rem;
         font-size: 4rem;
         color: lightblue;
     }
-    
+
     .file-info {
         flex: 1 1 auto;
     }
-    
+
     .file-details {
         flex: 1 1 auto;
     }
-    
+
     .file-actions {
         flex: 0 0 auto;
-    } 
+    }
 }
 
 .file + .file {
@@ -1755,11 +1755,11 @@ div.dropdown-menu {
         flex: 0 0 2.5rem;
         font-size: 1.8rem;
     }
-    
+
     h5 {
         margin-bottom: 0.5rem;
     }
-    
+
     small {
         display: block;
     }
@@ -1768,22 +1768,21 @@ div.dropdown-menu {
 
 .document-block-header {
     padding: 1rem 0;
-    
+
     h4 {
         margin: 0;
     }
 }
 
 .file-expanded-details {
+	margin:-15px;
     margin-top: 15px;
-    margin-left: -15px;
-    margin-right: -15px;
     margin-bottom: 0;
-    
+
     .panel-default {
         border: none;
         border-top: 1px solid #CCC;
         border-radius: none;
     }
-    
+
 }
